add week12 things

--- a/week12/day1/blog-site-frontend/public/index.html
+++ b/week12/day1/blog-site-frontend/public/index.html
@@ -58,7 +58,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h6>Author: <span class="js-title"></span></h6>
+                    <h6>Author: <span class="js-author"></span></h6>
                     <p class="js-content"></p>
                     <sub class="js-date"></sub>
                 </div>
