--- a/week12/day1/blog-site-frontend/public/new/index.html
+++ b/week12/day1/blog-site-frontend/public/new/index.html
@@ -52,7 +52,7 @@
                 <label for="content">Content</label>
                 <textarea class="form-control" id="content" name="content"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 
