--- a/week12/day1/chat-app-server/public/index.html
+++ b/week12/day1/chat-app-server/public/index.html
@@ -22,10 +22,14 @@
 <input type="text" id="chatMessageTextBox"/>
 <button id="btnSend">Send</button>
 
+<hr>
+<label for="username">Username: </label>
+<input type="text" id="username" />
+
 <p>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/client.js"></script>
+<script src="/assets/client.js"></script>
 
 </body>
 </html>
